2005-11-01  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/ObserverManager.java: The one and only...ObserverManager.
	* observers/TaskForkedObserver.java (getCopy): Now uses new application
	pattern.
	* observers/ObserverRoot.java (getCopy, applyObserver): new 
	functions.
	* ThreadMenu.java (ThreadMenu): Rretrieves observers from 
	ObserverManager instead of ActionPool.
	* ObserversMenu.java (ObserversMenu): Refactored to use new 
	observer addition pattern.
	* TaskData.java (setTask): Refactored observer addition( that 
	effecting gui components) to here.
	* GuiData.java: Commented out observer removal code (to be 
	moved to fit new pattern).
	* ActionPool.java: Started migration of observer addition code
	to observers/* (ForkObserver done).

2005-10-28  Phil Muldoon  <pmuldoon@redhat.com>

	* ProgramAddWindow.java (setApplyCancelButtonListener): Added.
	(buildObserverListBox):  Ditto.
	(doValidation): Ditto. (Do wizard validation checks).

2005-10-28  Sami Wagiaalla  <swagiaal@redhat.com>

	* observers/ObserverRoot.java (ObserverRoot): add a null check
	before calling bouncee.
	* EventLogger.java: fixed null pointer exception.

2005-10-27  Phil Muldoon  <pmuldoon@redhat.com>

	* WindowManager.java (save): Added entry for programAddWindow.
	(load): Added entry for programAddWindow.
	
	* ProgramAddWindow.java (lifeCycleQuery): Add hideAll() on
	delete event instead of destroy.
	(setFileButtonListener): Added logic for browse file button.
	* ProgramViewPage.java (ProgramViewPage): Bring up Wizard
	instead of FileBrowser.

2005-10-27  Sami Wagiaalla  <swagiaal@redhat.com>

	* StatusWidget.java (StatusWidget): replaced scrolled window add
	with addWithViewport (fixed bz 1563).
	
2005-10-26  Phil Muldoon  <pmuldoon@redhat.com>

	* ProgramAddWindow.java (mountProcModel): Added.
	(getGladeWidgets): Added convienience function
	(createDataModel): Ditto.
	(setTreeListeners):  Ditto.
	(getSelectedProc): Added (returns right click).
